@startuml

skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho

skinparam class {
    BackgroundColor White
    ArrowColor #2C3E50
    BorderColor #2C3E50
    HeaderBackgroundColor #85C1E9
}

' MODEL DANYCH (ENCJE)
package "model" {

    enum Gender {
        MALE
        FEMALE
        OTHER
    }

    enum DayOfWeek {
        MONDAY
        ...
        SUNDAY
    }

    enum MatchStatus {
        PENDING
        LIKED_BY_USER_1
        LIKED_BY_USER_2
        MATCHED
        REJECTED
    }

    class User <<Entity>> {
        - Long id
        - String firstName
        - String lastName
        - String email
        - String universityName
        - String description
        - LocalDate dateOfBirth
        - int height
        - String password
        - String avatarUrl
        - Gender gender
        - List<TimeSlot> schedule
        - Set<Interest> interests
    }

    class TimeSlot <<Entity>> {
        - Long id
        - DayOfWeek dayOfWeek
        - LocalTime startTime
        - LocalTime endTime
        - boolean isFreeTime
        - User user
        + boolean overlaps(TimeSlot other)
    }

    class Interest <<Entity>> {
        - Long id
        - String name
        - String description
    }

    class Message <<Entity>> {
        - Long id
        - Long senderId
        - Long receiverId
        - String content
        - LocalDateTime timestamp
    }

    class Match <<Entity>> {
        - Long id
        - User user1
        - User user2
        - int compatibilityScore
        - MatchStatus status
        - LocalDateTime matchDate
    }
}

' WARSTWA DOSTĘPU DO DANYCH
package "repository" {

    interface UserRepository <<Repository>> {
        + Optional<User> findByEmail(String email)
        + List<User> findAll()
    }

    interface MatchRepository <<Repository>> {
        + List<Match> findAllForUser(User user)
    }

    interface MessageRepository <<Repository>> {
        + List<Message> findConversation(Long u1, Long u2)
    }

    interface InterestRepository <<Repository>> {
        + Optional<Interest> findByName(String name)
    }

    interface TimeSlotRepository <<Repository>> {
        'Standardowe metody CRUD
    }
}

' LOGIKA BIZNESOWA
package "service" {

    class MatchingService <<Service>> {
        + List<Match> generateMatches(Long userId)
        + List<Match> getSuccessMatches(Long userId)
        + void acceptMatch(Long matchId, Long userId)
        + void rejectMatch(Long matchId)
        - int calculateScore(User u1, User u2)
        - boolean shouldDisplayMatch(Match m, Long uid)
    }

    class UserService <<Service>> {
        + User registerUser(User user)
        + User updateUser(Long id, User details)
        + void deleteUser(Long id)
        + User findByEmail(String email)
    }

    class TimeSlotService <<Service>> {
        + TimeSlot addTimeSlot(TimeSlot slot, Long userId)
        + void deleteTimeSlot(Long id)
        + void importFromIcs(MultipartFile file, Long userId)
    }

    class MessageService <<Service>> {
        + Message saveMessage(Message msg)
        + List<Message> getConversation(Long u1, Long u2)
    }
}

' KONTROLERY (API)
package "controller" {

    class UsosMatchController <<RestController>> {
        + User createUser(User user)
        + List<Match> getUserMatches(Long userId)
        + List<Match> getSuccessMatches(Long userId)
        + void acceptMatch(Long mId, Long uId)
    }

    class TimeSlotController <<RestController>> {
        + TimeSlot addTimeSlot(TimeSlot slot)
        + void uploadSchedule(MultipartFile file)
    }

    class MessageController <<RestController>> {
        + Message saveMessage(Message msg)
        + List<Message> getConversation(Long u1, Long u2)
    }
}

' RELACJE (Kluczowe dla zrozumienia struktury)

' Relacje encji
User "1" *-- "*" TimeSlot : "Kompozycja (OneToMany)"
User "*" -- "*" Interest : "ManyToMany"
Match --> User : "Dotyczy (ManyToOne)"
User -- Gender
User -- DayOfWeek

' Relacje MVC (Wstrzykiwanie zależności)
UsosMatchController ..> UserService
UsosMatchController ..> MatchingService
UsosMatchController ..> InterestRepository

TimeSlotController ..> TimeSlotService
MessageController ..> MessageService

UserService ..> UserRepository
UserService ..> MatchRepository
UserService ..> InterestRepository

MatchingService ..> MatchRepository
MatchingService ..> UserRepository

TimeSlotService ..> TimeSlotRepository
TimeSlotService ..> UserRepository

MessageService ..> MessageRepository

@enduml